--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "koa-respond": "^1.0.1",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.5",
-    "moment": "^2.22.0"
+    "moment": "^2.22.0",
+    "mongoose": "^5.0.14",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
